fix css layout issue

--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -4,8 +4,6 @@
 
 html, body, #main-box {
     margin: 0px;
-    height: 100%;
-    width: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
