--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -9,6 +9,7 @@
 
 svg {
     overflow: visible;
+    display: block;
 }
 
 header {
